--- a/R Analysis Scripts/PropOc Data 3D.Rmd
+++ b/R Analysis Scripts/PropOc Data 3D.Rmd
@@ -26,6 +26,11 @@ library("vcd")#this is fro fitting models to data
 library(viridis)#color palette
 library(gganimate)#gifs for ggplot
 
+lseq <- function(from, to, length.out) {
+  # logarithmic spaced sequence
+  # blatantly stolen from library("emdbook"), because need only this
+  exp(seq(log(from), log(to), length.out = length.out))}
+
 source('/Users/jupabago/Documents/Whiteley/PROJECTS/Rpackage/PropOc Package/R/PropOcFunctions2.0.R') 
 #using the new 3D script with capped spheres.
 ```
@@ -122,11 +127,11 @@ PlotPropOcAll(mut3,"mut3")
 ```
 
 ```{r Plot comparison of prop oc between Strains}
-ggplot()+
+ggplot()+ 
   geom_point(data = combinedData %>% filter(Relation == "Pa->Pa"),aes(x=Distance,y=MeanPropOcc, color = Strain, shape =factor(BioRep) ),size=4)+
   scale_y_log10( breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
   facet_wrap( ~ TimePoint, ncol = 3)+
-  labs(title ="Pa->Pa")+
+  labs(title ="Pa->Pa")+  
   theme_cowplot()
 
 ggplot()+
@@ -326,17 +331,24 @@ wt3.1Whole<-read.csv(paste0("/Users/jupabago/Documents/Whiteley/PROJECTS/PaSaPro
 mut1.1Whole<-read.csv(paste0("/Users/jupabago/Documents/Whiteley/PROJECTS/PaSaProject/Spatial paper Data/Microscopy Data/PropOcDataAll/mut1-1000-1.csv"),header = T)
 mut2.1Whole<-read.csv(paste0("/Users/jupabago/Documents/Whiteley/PROJECTS/PaSaProject/Spatial paper Data/Microscopy Data/PropOcDataAll/mut2-1000-1.csv"),header = T)
 mut3.1Whole<-read.csv(paste0("/Users/jupabago/Documents/Whiteley/PROJECTS/PaSaProject/Spatial paper Data/Microscopy Data/PropOcDataAll/mut3-1000-1.csv"),header = T)
+
+wt1.2Whole<-read.csv(paste0("/Users/jupabago/Documents/Whiteley/PROJECTS/PaSaProject/Spatial paper Data/Microscopy Data/PropOcDataAll/wt1-1000-2.csv"),header = T)
+wt2.2Whole<-read.csv(paste0("/Users/jupabago/Documents/Whiteley/PROJECTS/PaSaProject/Spatial paper Data/Microscopy Data/PropOcDataAll/wt2-1000-2.csv"),header = T)
+wt3.2Whole<-read.csv(paste0("/Users/jupabago/Documents/Whiteley/PROJECTS/PaSaProject/Spatial paper Data/Microscopy Data/PropOcDataAll/wt3-1000-2.csv"),header = T)
+
+
 ```
 
-```{r functions to get propOc frequency tables}
-HistogramDistance <- function(df) {
-  histogram<- hist(df$PropOc, breaks = seq.int(0,1.02,.01)) 
-  #histogram<- hist(df$PropOc) 
-  output<-data.frame(histogram$mids,histogram$counts)
-  colnames(output)<-c("Value", "Frequency")
-  output<-output %>% mutate(Distance = df$Distance[[1]]) %>% filter(!Frequency==0)
-  return(output)
+```{r Whole PropOc frequency functions }
+GetAllHistPropOc <- function(df, timepoint){
+  data.GG<-GetHistPropOc(df, timepoint, "finalGG")
+  data.RG<-GetHistPropOc(df, timepoint, "finalRG")
+  data.RR<-GetHistPropOc(df, timepoint, "finalRR")
+  data.GR<-GetHistPropOc(df, timepoint, "finalGR")
+  allData<- bind_rows(data.GG,data.RR,data.RG,data.GR)
+return(allData)
 }
+
 GetHistPropOc <- function(df,timePoint, sources) {
   data<-df %>%  filter(TimePoint==timePoint) %>% filter(source==sources) %>% group_by(Distance) %>% filter(PropOc <1.02)
   dataList<-group_split(data)
@@ -345,46 +357,349 @@ GetHistPropOc <- function(df,timePoint, sources) {
   output<-output %>% mutate(Source = sources)
   return(output)
 }
-PlotAllPropOcData <- function(df, relation, timepoint) {
-  ggplot()+
+HistogramDistance <- function(df) {
+  #histogram<- hist(df$PropOc, breaks = seq.int(0,1.02,.01)) 
+  #histogram<- hist(df$PropOc) 
+  #histogram<- hist(df$PropOc, breaks = c(0,lseq(.001,1.03,100)))
+  histogram<- hist(df$PropOc, breaks = c(0,lseq(.0001,1.03,100)))
+  output<-data.frame(histogram$mids,histogram$counts, histogram$density)
+  colnames(output)<-c("Value", "Frequency", "Density")
+  output<-output %>% mutate(Distance = df$Distance[[1]]) %>% filter(!Frequency==0)
+  return(output)
+}
+
+#Get all of the distributions
+#below are for first run:
+wt1.1Whole.5<-GetAllHistPropOc(wt1.1Whole,5)
+wt2.1Whole.5<-GetAllHistPropOc(wt2.1Whole,5)
+wt3.1Whole.5<-GetAllHistPropOc(wt3.1Whole,5)
+mut1.1Whole.5<-GetAllHistPropOc(mut1.1Whole,5)
+mut2.1Whole.5<-GetAllHistPropOc(mut2.1Whole,5)
+mut3.1Whole.5<-GetAllHistPropOc(mut3.1Whole,5)
+#second run
+wt1.2Whole.5<-GetAllHistPropOc(wt1.2Whole,5)
+wt2.2Whole.5<-GetAllHistPropOc(wt2.2Whole,5)
+wt3.2Whole.5<-GetAllHistPropOc(wt3.2Whole,5)
+
+#log sequence
+wt1.1Whole.5log<-GetAllHistPropOc(wt1.1Whole,5)  
+wt2.1Whole.5log<-GetAllHistPropOc(wt2.1Whole,5)
+wt3.1Whole.5log<-GetAllHistPropOc(wt3.1Whole,5)
+mut1.1Whole.5log<-GetAllHistPropOc(mut1.1Whole,5)
+mut2.1Whole.5log<-GetAllHistPropOc(mut2.1Whole,5)
+mut3.1Whole.5log<-GetAllHistPropOc(mut3.1Whole,5)
+
+#log starting at .0001
+wt1.1Whole.5log2<-GetAllHistPropOc(wt1.1Whole,5)  
+wt2.1Whole.5log2<-GetAllHistPropOc(wt2.1Whole,5)
+wt3.1Whole.5log2<-GetAllHistPropOc(wt3.1Whole,5)
+mut1.1Whole.5log2<-GetAllHistPropOc(mut1.1Whole,5)
+mut2.1Whole.5log2<-GetAllHistPropOc(mut2.1Whole,5)
+mut3.1Whole.5log2<-GetAllHistPropOc(mut3.1Whole,5)
+```
+
+```{r Whole PropOc frequency Figures}
+PlotAllPropOcData <- function(df, timepoint, relation ) {
+  plot<-ggplot()+ 
     geom_point(data = df,aes(x=Value,y=Frequency, color = Distance),size=2)+
     scale_y_log10( breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
     #scale_x_log10( breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
     labs(title =paste( relation, timepoint))+
     #scale_color_viridis(option = "D")+
     scale_color_gradientn(colours = rainbow(5))+
+    xlim(0,1)+
+    theme_cowplot()+
+    theme(plot.title = element_text(hjust = 0.5))
+  name<-paste0(relation, ".hour", timepoint,".png")
+  ggsave(paste0(name),plot = plot, width = 17, height = 10)
+}
+
+PlotAllPropOcData(wt1.1Whole.5 %>% filter (Source == "finalGG"), 5, "Wt 1-1 PA->PA")
+PlotAllPropOcData(wt2.1Whole.5 %>% filter (Source == "finalGG"), 5, "Wt 2-1 PA->PA")
+PlotAllPropOcData(wt3.1Whole.5 %>% filter (Source == "finalGG"), 5, "Wt 3-1 PA->PA")
+
+PlotAllPropOcData(wt1.2Whole.5 %>% filter (Source == "finalGG"), 5, "Wt 1-2 PA->PA")
+PlotAllPropOcData(wt2.2Whole.5 %>% filter (Source == "finalGG"), 5, "Wt 2-2 PA->PA")
+PlotAllPropOcData(wt3.2Whole.5 %>% filter (Source == "finalGG"), 5, "Wt 3-2 PA->PA")
+
+PlotAllPropOcData(mut1.1Whole.5 %>% filter (Source == "finalGG"), 5, "Mut 1-1 PA->PA")
+PlotAllPropOcData(mut2.1Whole.5 %>% filter (Source == "finalGG"), 5, "Mut 2-1 PA->PA")
+PlotAllPropOcData(mut3.1Whole.5 %>% filter (Source == "finalGG"), 5, "Mut 3-1 PA->PA")
+
+PlotAllPropOcData(wt1.1Whole.5 %>% filter (Source == "finalRG"), 5, "Wt 1-1 SA->PA")
+PlotAllPropOcData(wt2.1Whole.5 %>% filter (Source == "finalRG"), 5, "Wt 2-1 SA->PA")
+PlotAllPropOcData(wt3.1Whole.5 %>% filter (Source == "finalRG"), 5, "Wt 3-1 SA->PA")
+
+PlotAllPropOcData(wt1.2Whole.5 %>% filter (Source == "finalRG"), 5, "Wt 1-2 SA->PA")
+PlotAllPropOcData(wt2.2Whole.5 %>% filter (Source == "finalRG"), 5, "Wt 2-2 SA->PA")
+PlotAllPropOcData(wt3.2Whole.5 %>% filter (Source == "finalRG"), 5, "Wt 3-2 SA->PA")
+
+PlotAllPropOcData(mut1.1Whole.5 %>% filter (Source == "finalRG"), 5, "Mut1-1 SA->PA")
+PlotAllPropOcData(mut2.1Whole.5 %>% filter (Source == "finalRG"), 5, "Mut2-1 SA->PA")
+PlotAllPropOcData(mut3.1Whole.5 %>% filter (Source == "finalRG"), 5, "Mut3-1 SA->PA")
+
+PlotAllPropOcData(wt1.1Whole.5 %>% filter (Source == "finalRR"), 5, "Wt 1-1 SA->SA")
+PlotAllPropOcData(wt2.1Whole.5 %>% filter (Source == "finalRR"), 5, "Wt 2-1 SA->SA")
+PlotAllPropOcData(wt3.1Whole.5 %>% filter (Source == "finalRR"), 5, "Wt 3-1 SA->SA")
+
+PlotAllPropOcData(mut1.1Whole.5 %>% filter (Source == "finalRR"), 5, "Mut1-1 SA->SA")
+PlotAllPropOcData(mut2.1Whole.5 %>% filter (Source == "finalRR"), 5, "Mut2-1 SA->SA")
+PlotAllPropOcData(mut3.1Whole.5 %>% filter (Source == "finalRR"), 5, "Mut3-1 SA->SA")
+
+PlotAllPropOcData(wt1.1Whole.5 %>% filter (Source == "finalGR"), 5, "Wt 1-1 PA->SA")
+PlotAllPropOcData(wt2.1Whole.5 %>% filter (Source == "finalGR"), 5, "Wt 2-1 PA->SA")
+PlotAllPropOcData(wt3.1Whole.5 %>% filter (Source == "finalGR"), 5, "Wt 3-1 PA->SA")
+
+PlotAllPropOcData(mut1.1Whole.5 %>% filter (Source == "finalGR"), 5, "Mut1-1 PA->SA")
+PlotAllPropOcData(mut2.1Whole.5 %>% filter (Source == "finalGR"), 5, "Mut2-1 PA->SA")
+PlotAllPropOcData(mut3.1Whole.5 %>% filter (Source == "finalGR"), 5, "Mut3-1 PA->SA")
+
+#Honestly, they all look pretty much the same...
+#let's try doing the bins in an exponential function...
+PlotAllPropOcDatalog <- function(df, timepoint, relation ) {
+  plot<-ggplot()+ 
+    geom_point(data = df,aes(x=Value,y=Frequency, color = Distance),size=2)+
+    scale_y_log10( breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)),limits = (c(1,1001)))+
+    #scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)),limits = (c(0.0005,1)))+
+    labs(title =paste( relation, timepoint))+
+    #scale_color_viridis(option = "D")+
+    scale_color_gradientn(colours = rainbow(5))+
+    #xlim(0,1)+
+    theme_cowplot()+
+    theme(plot.title = element_text(hjust = 0.5))
+  name<-paste0(relation, ".hour", timepoint,"(log).png")
+  ggsave(paste0(name),plot = plot, width = 17, height = 10)
+}
+
+PlotAllPropOcDatalog(wt1.1Whole.5log %>% filter (Source == "finalRG"), 5, "Wt 1-1 SA->PA")
+PlotAllPropOcDatalog(wt2.1Whole.5log %>% filter (Source == "finalRG"), 5, "Wt 2-1 SA->PA")
+PlotAllPropOcDatalog(wt3.1Whole.5log %>% filter (Source == "finalRG"), 5, "Wt 3-1 SA->PA")
+
+PlotAllPropOcDatalog(mut1.1Whole.5log %>% filter (Source == "finalRG"), 5, "Mut1-1 SA->PA")
+PlotAllPropOcDatalog(mut2.1Whole.5log %>% filter (Source == "finalRG"), 5, "Mut2-1 SA->PA")
+PlotAllPropOcDatalog(mut3.1Whole.5log %>% filter (Source == "finalRG"), 5, "Mut3-1 SA->PA")
+
+PlotAllPropOcDatalog(wt1.1Whole.5log %>% filter (Source == "finalGR"), 5, "Wt 1-1 PA->SA")
+PlotAllPropOcDatalog(wt2.1Whole.5log %>% filter (Source == "finalGR"), 5, "Wt 2-1 PA->SA")
+PlotAllPropOcDatalog(wt3.1Whole.5log %>% filter (Source == "finalGR"), 5, "Wt 3-1 PA->SA")
+
+PlotAllPropOcDatalog(mut1.1Whole.5log %>% filter (Source == "finalGR"), 5, "Mut1-1 PA->SA")
+PlotAllPropOcDatalog(mut2.1Whole.5log %>% filter (Source == "finalGR"), 5, "Mut2-1 PA->SA")
+PlotAllPropOcDatalog(mut3.1Whole.5log %>% filter (Source == "finalGR"), 5, "Mut3-1 PA->SA")
+
+
+
+```
+
+```{r Whole PropOc Data wrangling}
+#So, I think the first thing to do would be to get a "mode", or the highest value for frequency of proportional occupancy per distance.
+#at this point I can see at least if the zone of interest is the same for every sample.
+
+GetMaxDensity <- function(df) {#this one is essentially the same as the one below, but thos one doesnt allow repeated max density values
+  df.summary<-df %>% mutate(Density = Frequency/1000) %>% #this is to make it be from 0 to 1
+    group_by(Distance, Source) %>% select(Value, Distance,Density, Source) %>% summarise(DensestValue = Value [Density ==max(Density)], MaxDensity = max(Density))
+  return(df.summary)
+}
+
+DensityCheck <- function(df) {
+  df.summary<-df %>% 
+    mutate(Density = Frequency/1000) %>% #this is to make it be from 0 to 1
+    group_by(Distance, Source) %>% select(Value, Distance,Density, Source) %>% 
+    mutate(MaxDensity = max(Density)) %>% 
+    mutate(DensityCh = ifelse(Density ==max(Density), 1, 0 )) %>% filter(DensityCh==1) %>% ungroup()#find max density, check where it matches
+  df.summary<-df.summary %>% group_by(Distance, Source) %>% mutate(DoubledValues = sum(DensityCh))#this is just to find which values were repeated
+  return(df.summary)
+}
+
+ProcessDensities <- function(histograms) {
+histogramNames<- c("wt1.1","wt2.1","wt3.1","mut1.1","mut2.1","mut3.1")
+mappedDensities<-map(histograms,DensityCheck)
+namedMappedDensities<-map2(mappedDensities, histogramNames, ~.x %>% mutate(Sample = .y))
+allDensities<-bind_rows(namedMappedDensities)
+allDensities<-allDensities %>% ungroup() %>% 
+  mutate(Strain = recode(allDensities$Sample, wt1.1="wt",wt2.1="wt",wt3.1="wt",mut1.1="mut",mut2.1="mut",mut3.1="mut"))
+return(allDensities)}
+
+
+histograms<- list(wt1.1Whole.5,wt2.1Whole.5,wt3.1Whole.5,mut1.1Whole.5,mut2.1Whole.5,mut3.1Whole.5)
+histogramslog<- list(wt1.1Whole.5log,wt2.1Whole.5log,wt3.1Whole.5log,mut1.1Whole.5log,mut2.1Whole.5log,mut3.1Whole.5log)
+histogramslog2<- list(wt1.1Whole.5log2,wt2.1Whole.5log2,wt3.1Whole.5log2,mut1.1Whole.5log2,mut2.1Whole.5log2,mut3.1Whole.5log2)
+
+allDensitiesFunctions<-ProcessDensities(histograms)
+allDensitiesLog<-ProcessDensities(histogramslog)
+allDensitiesLog2<-ProcessDensities(histogramslog2)
+```
+
+```{r Whole Prop Freq Figures}
+PlotMaxDensities <- function(df) {
+  ggplot()+
+    geom_jitter(data = df,aes(y=Value, color=Density,x = Distance, shape = Sample),size=2)+
+    labs(title ="Maximum Density")+
+    scale_y_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    #scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    facet_wrap( ~ Source, ncol = 2)+
+    scale_color_gradientn(colours = rainbow(5))+
+    scale_shape_manual(values=c(0,1,2, 15,16,17))+
     theme_cowplot()+
     theme(plot.title = element_text(hjust = 0.5))
 }
-GetAllHistPropOc <- function(df, timepoint){
-  data.GG<-GetHistPropOc(df, timepoint, "finalGG")
-  data.RG<-GetHistPropOc(df, timepoint, "finalRG")
-  data.RR<-GetHistPropOc(df, timepoint, "finalRR")
-  data.GR<-GetHistPropOc(df, timepoint, "finalGR")
-return(list(data.GG,data.RR,data.RG,data.GR))
+PlotMaxDensities(allDensities)
+PlotMaxDensities(allDensitiesFunctions %>% filter(Source=="finalRG"))
+PlotMaxDensities(allDensitiesLog)
+PlotMaxDensities(allDensitiesLog2)
+```
+#Calculating 50 percentile density.
+```{r death curves Functions and data}
+getDeathCurve<-function(df){
+  totalFrequency = sum(df$Frequency)
+  currentFrequency = 0
+  for (i in 1 : nrow(df)){
+    addedFrequency<-totalFrequency-currentFrequency
+    df[i,6]<-addedFrequency
+    currentFrequency = currentFrequency+df[i,2]
+  }
+  colnames(df)<-c("Value","Frequency","Density", "Distance", "Source","Decay")
+  df<-df %>% mutate (normDecay = 100*(Decay - min(Decay)) / (max(Decay) - min(Decay)))
+  return(df)
+  }
+processData<-function(df){
+  allData<-df %>% group_by(Distance, Source)
+  yas<- group_split(allData)
+  mappedData<-map(yas, getDeathCurve)
+  boundData<-bind_rows(mappedData)
 }
-testGetAllHistPropOc<-GetAllHistPropOc(mut3.1Whole,5)
+GetPercentiles<-function(histograms){
+  histogramNames<- c("wt1.1","wt2.1","wt3.1","mut1.1","mut2.1","mut3.1")
+  mappedDensities<-map(histograms,processData)
+  namedMappedDensities<-map2(mappedDensities, histogramNames, ~.x %>% mutate(Sample = .y))
+  allDensities<-bind_rows(namedMappedDensities)
+  allDensities<-allDensities %>% ungroup() %>% 
+    mutate(Strain = recode(allDensities$Sample, wt1.1="wt",wt2.1="wt",wt3.1="wt",mut1.1="mut",mut2.1="mut",mut3.1="mut"))
+return(allDensities)}
 
-wt1.GG<-GetHistPropOc(wt1.1Whole, 0, "finalGG")
-wt1.RG<-GetHistPropOc(wt1.1Whole, 0, "finalRG")
-wt1.RR<-GetHistPropOc(wt1.1Whole, 0, "finalRR")
-wt1.GR<-GetHistPropOc(wt1.1Whole, 0, "finalGR")
+PlotPercentiles <- function(df) {
+  ggplot()+
+    geom_point(data = df,aes(y=Value, color=Percentile50,x = Distance, shape = Sample),size=2)+
+    #geom_pointrange(data = df,aes(x = Distance,y=meanValue,ymax=meanValue+SdValue,ymin=meanValue-SdValue, color=Strain),size=2)+
+    labs(title ="50 percentile Density")+
+    scale_y_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    #scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    facet_wrap( ~ Source, ncol = 2)+
+    scale_color_gradientn(colours = rainbow(5))+
+    scale_shape_manual(values=c(0,1,2, 15,16,17))+
+    theme_cowplot()+
+    theme(plot.title = element_text(hjust = 0.5))
+  }
 
 
-wt1.GG.5<-GetHistPropOc(wt1.1Whole, 5, "finalGG")
-wt1.RG.5<-GetHistPropOc(wt1.1Whole, 5, "finalRG")
-wt1.RR.5<-GetHistPropOc(wt1.1Whole, 5, "finalRR")
-wt1.GR.5<-GetHistPropOc(wt1.1Whole, 5, "finalGR")
+allDeathCurvesLog2<-GetPercentiles(histogramslog2)
+#there are, I believe, at least 3 ways to find the 50 percentile. one of them is finidng the closest value, regardless of where it comes from, whether it is higher or lower than 50 percentile. The other two are either taking the closest to 50, either exclusively larger or exclusively smaller than that. That's why there are 3 ways of doing this here:
 
+#this is the closest to absolute value 50
+allDeathCurvesLog2midAbs <- allDeathCurvesLog2 %>% group_by(Sample, Distance, Source) %>% 
+  mutate(Percentile50 = min(abs(normDecay - 50)))%>% 
+  mutate(DensityCh = ifelse(Percentile50 ==abs(normDecay - 50), 1, 0 )) %>% filter(DensityCh==1) %>% mutate(DoubledValues = sum(DensityCh)) %>% ungroup()#find max density, check where it matches
 
-PlotAllPropOcData(wt1.GG)
-PlotAllPropOcData(wt1.GR)
-PlotAllPropOcData(wt1.RR)
-PlotAllPropOcData(wt1.RG)
+#this is coming from the highest value
+allDeathCurvesLog2topAbs <- allDeathCurvesLog2 %>% group_by(Sample, Distance, Source) %>% 
+  mutate(Percentile50 = (normDecay - 50)) %>% filter (Percentile50>0) %>% filter(Percentile50==min(Percentile50)) %>%  
+  mutate(DensityCh = ifelse(Percentile50 ==(normDecay - 50), 1, 0 )) %>% filter(DensityCh==1) %>% 
+  mutate(DoubledValues = sum(DensityCh)) %>% ungroup()#find max density, check where it matches
 
-PlotAllPropOcData(wt1.GG.5,5, "PA->PA")
-PlotAllPropOcData(wt1.GR.5,5, "PA->SA")
-PlotAllPropOcData(wt1.RR.5,5, "SA->SA")
-PlotAllPropOcData(wt1.RG.5,5, "SA->PA")
+#this is coming from the lowest value
+allDeathCurvesLog2bottomAbs <- allDeathCurvesLog2 %>% group_by(Sample, Distance, Source) %>% 
+  mutate(Percentile50 = (50 -normDecay)) %>% filter (Percentile50>0) %>% filter(Percentile50==min(Percentile50)) %>%  
+  mutate(DensityCh = ifelse(Percentile50 ==(50 - normDecay), 1, 0 )) %>% filter(DensityCh==1) %>% 
+  mutate(DoubledValues = sum(DensityCh)) %>% ungroup()#find max density, check where it matches
+
+#Plotting and comparing all 3
+PlotPercentiles(allDeathCurvesLog2midAbs)
+PlotPercentiles(allDeathCurvesLog2topAbs)
+PlotPercentiles(allDeathCurvesLog2bottomAbs)
+#they all look fine, so I'll just stick with the first one
+
+#this looks kind of ok... what is the mean and sd?
+allDeathCurvesLog2midAbsStats<-allDeathCurvesLog2midAbs %>% group_by(Strain, Distance, Source) %>% mutate(LogValue = log10(Value)) %>% mutate(meanValue = mean(Value), sdValue = sd(Value), meanLogValue = mean(LogValue),sdLogValue = sd(LogValue))
+PlotPercentiles(allDeathCurvesLog2midAbsStats)
+
+ggplot()+#linear
+    #geom_point(data = df,aes(y=Value, color=Percentile50,x = Distance, shape = Sample),size=2)+
+    geom_pointrange(data = allDeathCurvesLog2midAbsStats,aes(x = Distance,y=meanValue,ymax=meanValue+sdValue,ymin=meanValue-sdValue, color=Strain),size=.5)+
+    labs(title ="50 percentile Density")+
+    scale_y_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    #scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    facet_wrap( ~ Source, ncol = 2)+
+    #scale_color_gradientn(colours = rainbow(5))+
+    #scale_shape_manual(values=c(0,1,2, 15,16,17))+
+    theme_cowplot()+
+    theme(plot.title = element_text(hjust = 0.5))
+
+ggplot()+#log transform
+    geom_pointrange(data = allDeathCurvesLog2midAbsStats,aes(x = Distance,y=meanLogValue,ymax=meanLogValue+sdLogValue,ymin=meanLogValue-sdLogValue, color=Strain),size=.5)+
+    labs(title ="50 percentile Density (Log)")+
+    facet_wrap( ~ Source, ncol = 2)+
+    theme_cowplot()+
+    theme(plot.title = element_text(hjust = 0.5))
+```
+#Enrichment (distance at highest proportional occupancy)
+```{r Enrichment}
+#find the max proportional occupancy value from the 50 percentile
+
+allDeathCurvesLog2midAbsEnrichment<- allDeathCurvesLog2midAbs %>% group_by(Sample, Source)%>%select(Value, Distance, Source,Sample, Strain, Percentile50) %>% mutate(Enrichment = max(Value)) %>%
+  mutate(EnrichmentCh = ifelse(Enrichment == Value, 1, 0 )) %>% filter(EnrichmentCh==1) %>% mutate(DoubledValues = sum(EnrichmentCh)) %>% ungroup()#find max
+
+PlotEnrichment <- function(df) {
+ggplot()+#first run
+    geom_point(data = df,aes(y=Distance, x = Sample, color = Enrichment, shape = Sample),size=2)+
+    labs(title ="50 percentile Enrichment")+
+    #scale_y_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    #scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    facet_wrap( ~ Source, ncol = 2)+
+    scale_color_gradientn(colours = rainbow(5))+
+    scale_shape_manual(values=c(0,1,2, 15,16,17))+
+    theme_cowplot()+
+    theme(plot.title = element_text(hjust = 0.5))
+}
+
+PlotDataEnrichmentEmphasis <- function(wholeData, EnrichmentData) {
+ggplot()+#including rest of the data
+  geom_point(data = wholeData,aes(y=Value, color=Percentile50,x = Distance, shape = Sample),size=2)+
+  geom_point(data = EnrichmentData,aes(y=Value, color=Percentile50,x = Distance, shape = Sample),size=5)+
+  labs(title ="50 percentile Density (Enrichment emphasis)")+
+  scale_y_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+  #scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+  facet_wrap( ~ Source, ncol = 2)+
+  scale_color_gradientn(colours = rainbow(5))+
+  scale_shape_manual(values=c(0,1,2, 15,16,17))+
+  theme_cowplot()+
+  theme(plot.title = element_text(hjust = 0.5))
+}
+
+PlotEnrichment(allDeathCurvesLog2midAbsEnrichment)
+PlotDataEnrichmentEmphasis(allDeathCurvesLog2midAbs,allDeathCurvesLog2midAbsEnrichment)
+
+#That looks like a lot of the values are just at 0.5 distance, which I dont really care, I can make another argument about direct contact, so I'll filter those out...
+allDeathCurvesLog2midAbsEnrichment2<- allDeathCurvesLog2midAbs %>% filter(!Distance ==0.5)%>% 
+  group_by(Sample, Source) %>% select(Value, Distance, Source,Sample, Strain, Percentile50) %>% mutate(Enrichment = max(Value)) %>%
+  mutate(EnrichmentCh = ifelse(Enrichment == Value, 1, 0 )) %>% filter(EnrichmentCh==1) %>% mutate(DoubledValues = sum(EnrichmentCh)) %>% ungroup()#find max
+
+PlotEnrichment(allDeathCurvesLog2midAbsEnrichment2)
+PlotDataEnrichmentEmphasis(allDeathCurvesLog2midAbs,allDeathCurvesLog2midAbsEnrichment2)
+
+#This looks a little better... now get the mean per condition
+allDeathCurvesLog2midAbsEnrichment2<-allDeathCurvesLog2midAbsEnrichment2 %>% group_by(Source, Sample) %>% mutate(EnrichmentDistance = mean(Distance)) %>% ungroup() %>% group_by(Source, Strain) %>% mutate(meanEnrichment = mean(EnrichmentDistance), sdEnrichment = sd(EnrichmentDistance))
+
+ggplot()+
+    geom_point(data = allDeathCurvesLog2midAbsEnrichment2,aes(y=meanEnrichment, x = Strain, color = Strain),size=4)+
+    geom_errorbar(data = allDeathCurvesLog2midAbsEnrichment2,
+                  aes(ymin = meanEnrichment-sdEnrichment,ymax = meanEnrichment+sdEnrichment, x = Strain, color = Strain),size=1)+
+    geom_jitter(data = allDeathCurvesLog2midAbsEnrichment2,aes(y=Distance, x = Strain, color = Strain, shape = Sample),size=2)+
+    labs(title ="50 percentile Enrichment by strain")+
+    facet_wrap( ~ Source, ncol = 2)+
+    #scale_color_gradientn(colours = rainbow(5))+
+    scale_shape_manual(values=c(0,1,2, 15,16,17))+
+    theme_cowplot()+
+    theme(plot.title = element_text(hjust = 0.5))
 
 ```
